Simplify configuration for Vercel deployment

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bubble Shooter - Classic Arcade Game | Monster Survivors</title>
+    <title>Bubble Shooter - Classic Arcade Game</title>
     <meta name="description" content="Play Bubble Shooter online for free! Match and pop colorful bubbles in this addictive arcade game. Perfect for quick fun and challenging gameplay.">
-    <link rel="canonical" href="https://monstersurvivors.com/bubble-shooter" />
+    <link rel="canonical" href="https://bubble-shooter-game-tang121388.vercel.app" />
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         /* Apple-inspired color palette */
